src/snapshots/lwoss__range__tests__begin_only.snap
---
source: src/range.rs
expression: p
---
Parts {
    status: 206,
    version: HTTP/1.1,
    headers: {
        "accept-ranges": "bytes",
        "last-modified": "Mon, 15 Jun 2020 10:29:06 GMT",
        "content-length": "5",
        "content-type": "text/html",
        "content-range": "bytes 470-474/475",
    },
}
