src/snapshots/lwoss__range__tests__invalid_range.snap
---
source: src/range.rs
expression: h
---
Parts {
    status: 416,
    version: HTTP/1.1,
    headers: {
        "accept-ranges": "bytes",
        "last-modified": "Mon, 15 Jun 2020 10:29:06 GMT",
        "content-range": "bytes */475",
    },
}
