src/snapshots/lwoss__range__tests__multiple.snap
---
source: src/range.rs
expression: p
---
Parts {
    status: 416,
    version: HTTP/1.1,
    headers: {
        "accept-ranges": "bytes",
        "last-modified": "Mon, 15 Jun 2020 10:29:06 GMT",
        "content-range": "bytes */475",
    },
}
