src/snapshots/lwoss__range__tests__non_range.snap
---
source: src/range.rs
expression: p
---
Parts {
    status: 200,
    version: HTTP/1.1,
    headers: {
        "accept-ranges": "bytes",
        "content-length": "475",
        "content-type": "text/plain",
    },
}
