src/snapshots/lwoss__range__tests__not_found.snap
---
source: src/range.rs
expression: p
---
Parts {
    status: 404,
    version: HTTP/1.1,
    headers: {},
}
