src/snapshots/lwoss__range__tests__single.snap
---
source: src/range.rs
expression: p
---
Parts {
    status: 206,
    version: HTTP/1.1,
    headers: {
        "accept-ranges": "bytes",
        "content-range": "bytes 1-3/475",
        "content-length": "3",
        "content-type": "text/plain",
    },
}
